fix header alignment

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -32,7 +32,6 @@ h1 {
 }
 
 p {
-  /*padding: 50px;*/
   margin: 0 0 20px 0;
 }
 
@@ -45,27 +44,28 @@ footer {
 .navigation {
   list-style: none;
   margin: 0;
-  background: deepskyblue;
+  background: #42A5F5;
 
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
+  align-items: center;
 
   -webkit-flex-flow: row wrap;
   justify-content: flex-end;
 }
 
+.col-1 {
+  flex: 1;
+}
+
 .navigation a {
   text-decoration: none;
   display: block;
-  padding: 1em;
+  padding: 0 50px 0 0;
   color: white;
-}
-
-.navigation a:hover {
-  background: darken(deepskyblue, 2%);
 }
 
 @media all and (max-width: 800px) {
@@ -91,4 +91,10 @@ footer {
   .navigation li:last-of-type a {
     border-bottom: none;
   }
+}
+
+.stack {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
